syntax = "proto3";
package ecommerce.product.v1;

option java_multiple_files = true;
option java_package = "com.tcc.common.grpc.product";
option java_outer_classname = "ProductProto";

message ProductResponse {
  string id = 1;
  string name = 2;
  double price = 3;
}
message ListProductsRequest {}
message ListProductsResponse { repeated ProductResponse products = 1; }

service ProductService {
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
}